perf: approve performence by adding cache.csv to temporary saving data from leaderboard

--- a/MVP_WinRate_Marks.ipynb
+++ b/MVP_WinRate_Marks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "40978408",
    "metadata": {},
    "outputs": [],
@@ -27,14 +27,16 @@
     "from tqdm import tqdm\n",
     "import csv\n",
     "\n",
-    "pd.set_option('display.max_rows', None)\n",
-    "pd.set_option('display.max_columns', None)\n",
-    "pd.set_option('display.width', None)"
+    "from os.path import exists\n",
+    "\n",
+    "# pd.set_option('display.max_rows', None)\n",
+    "# pd.set_option('display.max_columns', None)\n",
+    "# pd.set_option('display.width', None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "id": "ff70191c",
    "metadata": {},
    "outputs": [
@@ -43,7 +45,7 @@
      "output_type": "stream",
      "text": [
       "200\n",
-      "[('https://sea.wildstats.gg/en/profile/D1pWIYi6Y5O5wfvRYG7T', 'Yasuo LoVe'), ('https://sea.wildstats.gg/en/profile/S4oFFBRE88hAEhs41Ike', 'RRQ Chazz'), ('https://sea.wildstats.gg/en/profile/EROGPRmlwyIuf24AnFNY', 'RRQ Tatsurii'), ('https://sea.wildstats.gg/en/profile/6LYjywZ3n8oYUe1wPwto', 'NGX ChammY'), ('https://sea.wildstats.gg/en/profile/YwMfAm4canvu06JXp7WW', 'xori eto lang aq')]\n"
+      "[('https://sea.wildstats.gg/en/profile/D1pWIYi6Y5O5wfvRYG7T', 'Yasuo LoVe'), ('https://sea.wildstats.gg/en/profile/S4oFFBRE88hAEhs41Ike', 'RRQ Chazz'), ('https://sea.wildstats.gg/en/profile/6LYjywZ3n8oYUe1wPwto', 'NGX ChammY'), ('https://sea.wildstats.gg/en/profile/EROGPRmlwyIuf24AnFNY', 'RRQ Tatsurii'), ('https://sea.wildstats.gg/en/profile/YwMfAm4canvu06JXp7WW', 'xori eto lang aq')]\n"
      ]
     }
    ],
@@ -65,54 +67,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "id": "9344592a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = 'challengers.csv'\n",
+    "\n",
+    "if not exists(file_name):\n",
+    "    threadLocal = threading.local()\n",
+    "\n",
+    "    def get_driver():\n",
+    "        driver = getattr(threadLocal, 'driver', None)\n",
+    "        if driver is None:\n",
+    "            chrome_options = Options()\n",
+    "            chrome_options.add_argument(\"--headless\")\n",
+    "            driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), \n",
+    "                                        options=chrome_options)\n",
+    "\n",
+    "            setattr(threadLocal, 'driver', driver)\n",
+    "        return driver\n",
+    "\n",
+    "    def scrap(data):\n",
+    "        url, id = data\n",
+    "\n",
+    "        driver = get_driver()\n",
+    "\n",
+    "        driver.get(url)\n",
+    "        html = driver.page_source\n",
+    "        soup = BeautifulSoup(html, features=\"html.parser\")\n",
+    "        row_datas = soup.findAll('h1', attrs={'class': 'text-center m-0'})\n",
+    "\n",
+    "        row_datas_text = [data.text for data in row_datas]\n",
+    "        marks = soup.find('span', attrs={'class':'badge badge-overlay text-white'}).findAll('div')[1].text.strip()\n",
+    "        return (marks, *row_datas_text, url)\n",
+    "\n",
+    "    with ThreadPool(5) as p:\n",
+    "        challenger_datas = list(tqdm(p.imap(scrap, leaderboard), total=len(leaderboard)))\n",
+    "    driver = get_driver()\n",
+    "    driver.quit()\n",
+    "\n",
+    "    df = pd.DataFrame(challenger_datas, columns=['Marks', 'WinRate', 'MVP', 'Played', 'URL'])\n",
+    "\n",
+    "    df.to_csv(file_name)\n",
+    "else:\n",
+    "    df = pd.read_csv(file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "39dbe541",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 200/200 [01:47<00:00,  1.86it/s]\n"
+      "   Unnamed: 0  Marks WinRate  MVP Played  \\\n",
+      "0           0    244  58.53%  341  1,102   \n",
+      "1           1    234  62.05%  330    751   \n",
+      "2           2    221  64.34%  265    603   \n",
+      "3           3    214  61.81%  234    741   \n",
+      "4           4    200  59.08%  307    782   \n",
+      "\n",
+      "                                                 URL  \n",
+      "0  https://sea.wildstats.gg/en/profile/D1pWIYi6Y5...  \n",
+      "1  https://sea.wildstats.gg/en/profile/S4oFFBRE88...  \n",
+      "2  https://sea.wildstats.gg/en/profile/6LYjywZ3n8...  \n",
+      "3  https://sea.wildstats.gg/en/profile/EROGPRmlwy...  \n",
+      "4  https://sea.wildstats.gg/en/profile/YwMfAm4can...  \n"
      ]
     }
    ],
    "source": [
-    "threadLocal = threading.local()\n",
-    "\n",
-    "def get_driver():\n",
-    "    driver = getattr(threadLocal, 'driver', None)\n",
-    "    if driver is None:\n",
-    "        chrome_options = Options()\n",
-    "        chrome_options.add_argument(\"--headless\")\n",
-    "        driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), \n",
-    "                                    options=chrome_options)\n",
-    "\n",
-    "        setattr(threadLocal, 'driver', driver)\n",
-    "    return driver\n",
-    "\n",
-    "def scrap(data):\n",
-    "    url, id = data\n",
-    "\n",
-    "    driver = get_driver()\n",
-    "\n",
-    "    driver.get(url)\n",
-    "    html = driver.page_source\n",
-    "    soup = BeautifulSoup(html, features=\"html.parser\")\n",
-    "    row_datas = soup.findAll('h1', attrs={'class': 'text-center m-0'})\n",
-    "\n",
-    "    row_datas_text = [data.text for data in row_datas]\n",
-    "    marks = soup.find('span', attrs={'class':'badge badge-overlay text-white'}).findAll('div')[1].text.strip()\n",
-    "    return (marks, *row_datas_text, url)\n",
-    "\n",
-    "with ThreadPool(5) as p:\n",
-    "    challenger_datas = list(tqdm(p.imap(scrap, leaderboard), total=len(leaderboard)))\n",
-    "\n",
-    "with open(\"out1.csv\", \"w\", newline=\"\") as f:\n",
-    "    writer = csv.writer(f)\n",
-    "    writer.writerows(challenger_datas)\n",
-    "\n",
-    "# driver.quit()"
+    "print(df.head())"
    ]
   }
  ],
